--- a/index.html
+++ b/index.html
@@ -245,6 +245,11 @@
                     <li><a href="http://termoorganika.pl/" target="_blank"><img src="img/producenci/termoorganika.jpg" alt="Logo Termoorganika"></a></li>
                     <li><a href="http://www.rockwool.pl/ocieplenie-domu?cid=pl|ps|Brand_Product|go&gclid=CKKo87uZr8sCFUh5cgodbrULhA" target="_blank"><img src="img/producenci/rockwool.png" alt="Logo Rockwool"></a></li>
                     <li><a href="http://www.ursa.pl/" target="_blank"><img src="img/producenci/ursa.png" alt="Logo Ursa"></a></li>
+                  </ul>
+                </div>
+                <div>
+                  <h3>Tynki, kleje, farby, grunty:</h3>
+                  <ul>
                     <li><a href="http://www.rimix.eu/index.php/tynki-powierzchniowe--popynne/rimix-tynk-akrylowy" target="_blank"><img src="img/producenci/rimix.png" alt="Logo Rimix"></a></li>
                     <li><a href="https://farbykabe.pl/" target="_blank"><img src="img/producenci/kabe.png" alt="Logo Kabe"></a></li>
                     <li><a href="http://www.alpol.pl/en/" target="_blank"><img src="img/producenci/alpol.png" alt="Logo Alpol"></a></li>
