--- a/index.html
+++ b/index.html
@@ -135,26 +135,26 @@
                 <h2>Oferta</h2>
                 <p> W naszej ofercie posiadamy produkty:</p>
                 <div>
-                  <h3>Cement:</h3>
+                  <h3>Cement</h3>
                   <ul>
                     <li><a href ="http://odrasa.eu/" target=”_blank” ><img src="img/producenci/cementowniaOdra.png" alt="Logo Cementownia Odra"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Wapno:</h3>
+                  <h3>Wapno</h3>
                   <ul>
                     <li><a href="http://www.lhoist.com/pl" target=”_blank”><img src="img/producenci/lhoist.png" alt="Logo Lhoist"></a></li>
                   </ul>
                 </div>
                 <div>
-                <h3 class="fundamenty">Fundamenty:</h3>
+                <h3 class="fundamenty">Fundamenty</h3>
                   <ul>
                     <li><a href="http://www.rembet.pl/strony,budowlane,bloczek-betonowy-.html" target=”_blank”><img src="img/producenci/rembet.png" alt="Logo Rembet"></a></li>
                     <li><a href="http://izolex.pl/" target=”_blank”><img src="img/producenci/izolex.png" alt="Logo Izolex"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Ściany - ceramika:</h3>
+                  <h3>Ściany - ceramika</h3>
                   <ul>
                     <li><a href="http://www.leier.pl/" target=”_blank”><img src="img/producenci/leier.png"></a></li>
                     <li><a href="http://www.wienerberger.com/" target=”_blank”><img src="img/producenci/wienenberger.png" alt="Logo Wienerberger"></a></li>
@@ -162,13 +162,13 @@
                   </ul>
                 </div>
                 <div>
-                  <h3>Ściany - beton komórkowy:</h3>
+                  <h3>Ściany - beton komórkowy</h3>
                   <ul>
                     <li><a href="http://www.prefabet-lagisza.pl/stona/index.html" target=”_blank”><img src="img/producenci/prefabet.png" alt="Logo Prefabet"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Cegła klinkierowa:</h3>
+                  <h3>Cegła klinkierowa</h3>
                   <ul>
                     <li><a href="http://roben.pl/" target=”_blank”><img src="img/producenci/roben.png" alt="Logo Roben"></a></li>
                     <li><a href="http://www.wienerberger.com/" target=”_blank”><img src="img/producenci/wienenberger.png" alt="Logo Wienerberger"></a></li>
@@ -183,40 +183,40 @@
                   </ul>
                 </div>
                 <div>
-                  <h3>Dachówka ceramiczna:</h3>
+                  <h3>Dachówka ceramiczna</h3>
                   <ul>
                     <li><a href="http://roben.pl/" target=”_blank”><img src="img/producenci/roben.png" alt="Logo Roben"></a></li>
                     <li><a href="http://www.wienerberger.com/" target=”_blank”><img src="img/producenci/wienenberger.png" alt="Logo Wienerberger"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Dachówka cementowa:</h3>
+                  <h3>Dachówka cementowa</h3>
                   <ul>
                     <li><a href="http://www.monier.pl/o-firmie/dachowka-braas.html" target=”_blank”><img src="img/producenci/brass.png" alt="Logo Brass"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Blachodachówki:</h3>
+                  <h3>Blachodachówki</h3>
                   <ul>
                     <li><a href="http://www.pruszynski.com.pl/blachodachowki.php" target="_blank"><img src="img/producenci/blachypruszynski.png" alt="Logo Pruszyński"></a></li>
                     <li><a href="http://www.blachotrapez.eu/en" target="_blank"><img src="img/producenci/blachotrapez.png"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Systemy rynnowe PCV:</h3>
+                  <h3>Systemy rynnowe PCV</h3>
                   <ul>
                     <li><a href="http://www.marley.pl/pl/" target=”_blank”><img src="img/producenci/marley.png" alt="Logo Marley"></a></li>
                     <li><a href="http://www.monier.pl/o-firmie/dachowka-braas.html" target=”_blank”><img src="img/producenci/brass.png" alt="Logo Brass"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Systemy rynnowe metalowe:</h3>
+                  <h3>Systemy rynnowe metalowe</h3>
                   <ul>
                     <li><a href="http://www.protec.pl/" target="_blank"><img src="img/producenci/protec.png" alt="Logo Protec"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Akcesoria dachowe:</h3>
+                  <h3>Akcesoria dachowe</h3>
                   <ul>
                     <li><a href="http://www.kloeber.pl/" target="_blank"><img src="img/producenci/kloeber_logo.png" alt="Logo Kloeber"></a></li>
                     <li><a href="http://www.mawip.pl/" target="_blank"><img src="img/producenci/mawip.png" alt="Logo Mawip"></a></li>
@@ -224,14 +224,14 @@
                   </ul>
                 </div>
                 <div>
-                  <h3>Okna dachowe:</h3>
+                  <h3>Okna dachowe</h3>
                   <ul>
                     <li><a href="http://www.velux.pl/" target="_blank"><img src="img/producenci/velux.png" alt="Logo Velux"></a></li>
                     <li><a href="http://www.okpol.pl/" target="_blank"><img src="img/producenci/okpol.png" alt="Logo Okpol"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Papy, gonty:</h3>
+                  <h3>Papy, gonty</h3>
                   <ul>
                     <li><a href="http://www.icopal.pl/" target="_blank"><img src="img/producenci/icopal.gif" alt="Logo Icopal"></a></li>
                     <li><a href="http://www.gutta.pl/" target="_blank"><img src="img/producenci/gutta.jpg" alt="Logo Gutta"></a></li>
@@ -239,7 +239,7 @@
                   </ul>
                 </div>
                 <div>
-                  <h3>Docieplenia:</h3>
+                  <h3>Docieplenia</h3>
                   <ul>
                     <li><a href="http://www.domstyr.pl/" target="_blank"><img src="img/producenci/domstyr.jpg" alt="Logo Domstyr"></a></li>
                     <li><a href="http://termoorganika.pl/" target="_blank"><img src="img/producenci/termoorganika.jpg" alt="Logo Termoorganika"></a></li>
@@ -248,7 +248,7 @@
                   </ul>
                 </div>
                 <div>
-                  <h3>Tynki, kleje, farby, grunty:</h3>
+                  <h3>Tynki, kleje, farby, grunty</h3>
                   <ul>
                     <li><a href="http://www.rimix.eu/index.php/tynki-powierzchniowe--popynne/rimix-tynk-akrylowy" target="_blank"><img src="img/producenci/rimix.png" alt="Logo Rimix"></a></li>
                     <li><a href="https://farbykabe.pl/" target="_blank"><img src="img/producenci/kabe.png" alt="Logo Kabe"></a></li>
@@ -256,7 +256,7 @@
                   </ul>
                 </div>
                 <div>
-                  <h3>Kostka brukowa:</h3>
+                  <h3>Kostka brukowa</h3>
                   <ul>
                     <li><a href="http://www.polbruk.pl/" target="_blank"><img src="img/producenci/polbruk.png" alt="Logo Polbruk"></a></li>
                     <li><a href="http://www.libet.pl/" target="_blank"><img src="img/producenci/libet.png" alt="Logo Libet"></a></li>
@@ -264,47 +264,47 @@
                   </ul>
                 </div>
                 <div>
-                  <h3>Gotowe zaprawy:</h3>
+                  <h3>Gotowe zaprawy</h3>
                   <ul>
                     <li><a href="http://www.rolas.pl/" target="_blank"><img src="img/producenci/rolas.png" alt= "Logo Rolas"></a></li>
                     <li><a href="http://www.alpol.pl/en/" target="_blank"><img src="img/producenci/alpol.png" alt="Logo Alpol"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Sucha zabudowa:</h3>
+                  <h3>Sucha zabudowa</h3>
                   <ul>
                     <li><a href="http://www.knauf.pl/" target="_blank"><img src="img/producenci/knauf.png" alt="Logo Knauf"></a></li>
                     <li><a href="http://www.sig.pl/armstrong/" target="_blank"><img src="img/producenci/armstrong.png" alt="Logo Armstrong"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Gładzie, gipsy, tynki gipsowe:</h3>
+                  <h3>Gładzie, gipsy, tynki gipsowe</h3>
                   <ul>
                     <li><a href="http://www.knauf.pl/" target="_blank"><img src="img/producenci/knauf.png" alt="Logo Knauf"></a></li>
                     <li><a href="http://www.franspol.com.pl/" target="_blank"><img src="img/producenci/franspol.png" alt="Logo Franspol"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Drzwi metalowe, bramy garażowe:</h3>
+                  <h3>Drzwi metalowe, bramy garażowe</h3>
                   <ul>
                     <li><a href="http://www.legbudgargula.com" target="blank"><img src="img/producenci/legbud.png" alt="Logo LegbudGargula"></a></li>
                     <li><a href="http://www.hormann.pl/" target="_blank"><img src="img/producenci/hoermann_logo_global.png" alt="Logo Hormann"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Płyta OSB:</h3>
+                  <h3>Płyta OSB</h3>
                   <ul>
                     <li><a href="http://pl.kronospan-express.com/pl" target="blank"><img src="img/producenci/kronospan.png" alt="Logo Kronospan"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Technika zamocowań:</h3>
+                  <h3>Technika zamocowań</h3>
                   <ul>
                     <li><a href="http://www.wkret-met.com.pl/" target="blank"><img src="img/producenci/wkretmet.png" alt="Logo Wkrętmet"></a></li>
                   </ul>
                 </div>
                 <div>
-                  <h3>Rury kanalizacyjne:</h3>
+                  <h3>Rury kanalizacyjne</h3>
                   <ul>
                     <li><a href="http://pl.wavin.com/web/produkty/woda-pitna-1/instalacje-wewnetrzne.htm?gclid=CPHq6Lm2r8sCFQv4cgodyyUMdg" target="blank"><img src="img/producenci/wavin.png" alt="Logo Wavin"></a></li>
                   </ul>
